--- a/index.html
+++ b/index.html
@@ -5,19 +5,42 @@
 </head>
 <body>
 <div id="menu">
-<li><a href="#about">About Me</a></li>
-<li><a href="#photos">My Photos</a></li>
-<li><a href="#playlist">My Playlist</a></li>
-<li><a href="#like">Like</a></li>
-<li><a href="#qrcoder">QR code</a></li>
-<li><a href="#spa">Q&A</a></li>
-<li><a href="#contact">Contact Me</a></li>
+    <div class="TrumpLogo" style="float:left">  
+          <img src="Donald Trump Images/Trump International.png" class="img-fluid">
+    </div>
+  <ul>
+    <li><a href="#about">About Me</a></li>
+    <li><a href="#photos">My Photos</a></li>
+    <li><a href="#playlist">My Playlist</a></li>
+    <li><a href="#like">Like</a></li>
+    <li><a href="#qrcoder">QR code</a></li>
+    <li><a href="#spa">Q&A</a></li>
+    <li><a href="#contact">Contact Me</a></li>
+  </ul>
+
 </div>
 		  
 <section id="about" class="section">
 <br/>
 <br/>
 <br/>
+
+<h2 class="HeadersText">About Me - I did some tremendous things during my lifetime</h2>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<i class="fa fa-diamond" style="font-size:36px;color:#120a8f">Born and raised in Queens, New York City, Trump graduated from the Wharton School of the University of Pennsylvania with a bachelor's degree in 1968.</i>
+<br/>
+<br/>
+<i class="fa fa-diamond" style="font-size:36px;color:#120a8f">He became president of his father Fred Trump's real estate business in 1971 and renamed it The Trump Organization.</i>
+<br/>
+<br/>
+<i class="fa fa-diamond" style="font-size:36px;color:#120a8f">From 2004 to 2015, he co-produced and hosted the reality television series The Apprentice.</i>
+<br/>
+<br/>
+<i class="fa fa-diamond" style="font-size:36px;color:#120a8f">He won the 2016 presidential race as the Republican nominee against Democratic nominee Hillary Clinton while losing the popular vote, becoming the first U.S. president with no prior military or government service.</i>
+<br>
+<p>Used on a button:</p>
+<button style="font-size:24px">Button <i class="fa fa-diamond"></i></button>
 <br/>
 <br/>
 <br/>
@@ -27,11 +50,6 @@
 <br/>
 <br/>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-about me
 <br/>
 <br/>
 <br/>
@@ -40,22 +58,58 @@ about me
 <section id="photos" class="section">
 <br/>
 <br/>
+
+<h2 class="HeadersText">My Photos</h2>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-my photos
-<br/>
+<div class="timeline-container" id="=timeline-1">
+  <div class="timeline-header">
+    <h3 class="timeline-header__subtitle">Throughout The Years</h3>
+  </div>
+  <div class="timeline">
+    <div class="timeline-item" data-text="Image Yearly Timeline">
+      <div class="timeline__content">
+        <img class="timeline__img" src="Donald Trump Images/Trump Academy.png"/>
+        <h2 class="timeline__content-title">1964</h2>
+        <p class="timeline__content-desc">Trump at the New York Military Academy</p>
+      </div>
+    </div>
+    <div class="timeline-item" data-text="Image Yearly Timeline">
+      <div class="timeline__content">
+        <img class="timeline__img" src="Donald Trump Images/Trump graduate.png">
+        <h2 class="timeline__content-title">1968</h2>
+        <p class="timeline__content-desc">Trump graduates from university of pennsylvania wharton school of finance</p>
+      </div>
+    </div>
+    <div class="timeline-item" data-text="Image Yearly Timeline">
+      <div class="timeline__content">
+        <img class="timeline__img" src="Donald Trump Images/Trump real estate.jpg">
+        <h2 class="timeline__content-title">1971</h2>
+        <p class="timeline__content-desc">Trump takes control of his father's real estate company</p>
+      </div>
+    </div>
+    <div class="timeline-item" data-text="Image Yearly Timeline">
+      <div class="timeline__content">
+        <img class="timeline__img" src="Donald Trump Images/Trump Tower.jpg">
+        <h2 class="timeline__content-title">1983</h2>
+        <p class="timeline__content-desc">Trump tower opens in Manhattan</p>
+      </div>
+    </div>
+    <div class="timeline-item" data-text="Image Yearly Timeline">
+      <div class="timeline__content">
+        <img class="timeline__img" src="Donald Trump Images/The Apprentice.png">
+        <h2 class="timeline__content-title">2004</h2>
+        <p class="timeline__content-desc">The Apprentice TV series debuts</p>
+      </div>
+    </div>
+    <div class="timeline-item" data-text="Image Yearly Timeline">
+      <div class="timeline__content">
+        <img class="timeline__img" src="Donald Trump Images/Trump elected.webp">
+        <h2 class="timeline__content-title">2016</h2>
+        <p class="timeline__content-desc">Trump is elected president</p>
+      </div>
+    </div>
+  </div>
+</div>
 <br/>
 <br/>
 </section>
@@ -70,37 +124,67 @@ my photos
 <br/>
 <br/>
 <br/>
+<h2 class="HeadersText">My Playlist - Lots Of Great Songs</h2>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-my playlist
-<br/>
-<br/>
+<p align="center"><iframe width="560" height="315" src="https://www.youtube.com/embed/6N2b14J-5tA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
+<div class="cut-diamond"></div>
 <br/>
 </section>
 
 <section id="like" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-give me a like
+<h2 class="HeadersText">Give Me A Like And Together We Will MAGA</h2>
+<p align="center"></p><iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&width=200&layout=box_count&action=like&size=small&share=true&height=65&appId" width=50% height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe></p>
 <br/>
 <br/>
 <br/>
@@ -123,7 +207,7 @@ give me a like
 <br/>
 <br/>
 <br/>
-scan my code
+<h2 class="HeadersText">Scan My Code</h2>
 <br/>
 <br/>
 <br/>
@@ -146,7 +230,7 @@ scan my code
 <br/>
 <br/>
 <br/>
-ans
+<h2 class="HeadersText">Ans</h2>
 <br/>
 <br/>
 <br/>
@@ -169,7 +253,7 @@ ans
 <br/>
 <br/>
 <br/>
-contact me
+<h2 class="HeadersText">Contact Me</h2>
 <br/>
 <br/>
 <br/>
