--- a/index.html
+++ b/index.html
@@ -41,23 +41,9 @@
 <br>
 <p>Used on a button:</p>
 <button style="font-size:24px">Button <i class="fa fa-diamond"></i></button>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
 </section>
 
 <section id="photos" class="section">
-<br/>
-<br/>
 
 <h2 class="HeadersText">My Photos</h2>
 <br/>
@@ -185,52 +171,34 @@
 <section id="like" class="section">
 <h2 class="HeadersText">Give Me A Like And Together We Will MAGA</h2>
 <p align="center"></p><iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&width=200&layout=box_count&action=like&size=small&share=true&height=65&appId" width=50% height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe></p>
-<br/>
-<br/>
-<br/>
 </section>
 
 <section id="qrcoder" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
 <h2 class="HeadersText">Scan My Code</h2>
 <br/>
+<img src="Donald Trump Images/qrcode_18269780_.png" alt="Italian Trulli" class="center">
 <br/>
 <br/>
 </section>
 
 <section id="spa" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
 <h2 class="HeadersText">Ans</h2>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
 <br/>
 <br/>
 <br/>
