--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
 <img src="Donald Trump Images/qrcode_18269780_.png" alt="Italian Trulli" class="center">
 <br/>
 <br/>
+<!-- check why the website does not add qr code -->
 </section>
 
 <section id="spa" class="section">
