--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 <h2 class="HeadersText">About Me - I did some tremendous things during my lifetime</h2>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<br/>
+<br/>
 <i class="fa fa-diamond" style="font-size:36px;color:#120a8f">Born and raised in Queens, New York City, Trump graduated from the Wharton School of the University of Pennsylvania with a bachelor's degree in 1968.</i>
 <br/>
 <br/>
@@ -40,8 +42,6 @@
 <br/>
 <i class="fa fa-diamond" style="font-size:36px;color:#120a8f">He won the 2016 presidential race as the Republican nominee against Democratic nominee Hillary Clinton while losing the popular vote, becoming the first U.S. president with no prior military or government service.</i>
 <br>
-<p>Used on a button:</p>
-<button style="font-size:24px">Button <i class="fa fa-diamond"></i></button>
 </section>
 
 <section id="photos" class="section">
@@ -186,17 +186,70 @@
 <section id="spa" class="section">
 <h2 class="HeadersText">Ans</h2>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
+<table style="width: 100%;">
+  <tr>
+    <th>Web1</th>
+    <th>Web2</th>
+    <th>Web3</th>
+  </tr>
+  <tr>
+    <td>The Hypertext/CGI Web. (the
+      basic)
+      </td>
+    <td>Companies publish content
+      that people consume (e.g.
+      CNN)
+      </td>
+    <td>Pushed web, text/graphics based
+      flash</td>
+  </tr>
+  <tr>
+    <td>The Community Web (for people:
+      apps/sites)
+      </td>
+    <td>People publish content that other
+      people can consume, companies
+      build platforms that let people
+      publish content for other people
+      (e.g. Flickr, YouTube, Adsense,
+      Wikipedia, Blogger, MySpace,
+      RSS, Digg)
+      </td>
+    <td>Two ways web pages, wikis,
+      videos, pod casts, shading,
+      Personal publishing, 2D poratals</td>
+  </tr>
+  <tr>
+    <td>The Semantic Web (for
+      machines)
+      </td>
+    <td>People build applications that
+      people can interact with,
+      companies build platforms that
+      let people publish services by
+      leveraging the associations
+      between people or special
+      content ( e. g. Face Book,
+      Google Maps, My Yahoo!)</td>
+    <td>3D portals, avtar representation,
+      Interoperable profits, Multi-user
+      virtual environment (MUVEs),
+      Integrated games, education and
+      business, all media flows in and
+      out of virtual web worlds.
+      </td>
+  </tr>
+</table>
+<h3 class="web">Use Case:
+  <br/> 
+  Suppose we want to get information about Julius Caesar.
+  <br/> 
+  In Web 1.0 we will go to some unchanging site where there is static information about Julius Caesar.
+  <br/> 
+  In Web 2.0, we will enter Wikipedia, a site where users share information, including about Julius Caesar.
+  <br/> 
+  In Web 3.0, we will use artificial intelligence in a virtual environment that will share with us information about Julius Caesar.
+</h3>
 <br/>
 <br/>
 <br/>
@@ -208,7 +261,8 @@
 
 <section id="contact" class="section">
 <h2 class="HeadersText">Contact Me</h2>
-
+<br/>
+<br/>
 <div class="form">
   <form name="Form1" method="post" action="mailto::adamsha@post.bgu.ac.il" enctype="text/plain">
     <label for="Email" autocomplete="on">Email To:</label><br>
@@ -218,7 +272,7 @@
     <br/>
     <br/>
       <!-- Prevent implicit submission of the form -->
-  <button type="submit" disabled style="display: none" aria-hidden="true"></button>
+      <button type="submit" disabled style="display: none" aria-hidden="true" style="font-size:24px"></button>
 
   <!-- ... -->
   <div id="drawer" class="emoji-drawer hidden"> 
@@ -229,7 +283,7 @@
     <div class="emoji" onclick="addEmoji(this.innerHTML)">😆</div>
   </div>
 
-  <input type="submit" value="Submit" onclick="alert('You will now move on to outlook')" size="20">
+  <i class="fa fa-diamond"></i><input type="submit" value="Submit" onclick="alert('You will now move on to outlook')" size="20"></i>
 
 
 
